# SPDX-License-Identifier: Apache-2.0
[package]
name = "belvi_ct_scan"
version = "0.1.0"
edition = "2021"

[dependencies]
belvi_log_list = { path = "../belvi_log_list" }

reqwest = { version = "0.11.9", features = ["brotli", "gzip", "json"] }
tokio = { version = "1.16.1", features = ["full"] }
serde_json = "1.0.78"
serde = { version = "1.0.136", features = ["derive"]}
base64 = "0.13.0"
x509-certificate = "0.6.0"
chrono = "0.4.19"
log = "0.4.14"
env_logger = "0.9.0"
rusqlite = "0.26.3"
