# SPDX-License-Identifier: Apache-2.0
[package]
name = "belvi_frontend"
version = "0.1.0"
edition = "2021"

[dependencies]
belvi_render = { path = "../belvi_render" }

tokio = { version = "1.16.1", features = ["full"] }
axum = "0.4.5"
log = "0.4.14"
env_logger = "0.9.0"
rusqlite = "0.26.3"
chrono = "0.4.19"
serde = { version = "1.0.136", features = ["derive"]}
serde_json = "1.0.78"
