# SPDX-License-Identifier: Apache-2.0
[package]
name = "belvi_frontend"
version = "0.1.0"
edition = "2021"

[dependencies]
belvi_render = { path = "../belvi_render" }
belvi_cert = { path = "../belvi_cert" }
belvi_cache = { path = "../belvi_cache" }
belvi_log_list = { path = "../belvi_log_list" }
belvi_hash = { path = "../belvi_hash" }
belvi_db = { path = "../belvi_db" }

tokio = { version = "1.16.1", features = ["full"] }
axum = "0.5.3"
log = "0.4.14"
env_logger = "0.9.0"
rusqlite = { version = "0.27.0", features = ["functions"] }
chrono = "0.4.19"
serde = { version = "1.0.136", features = ["derive"]}
serde_json = "1.0.78"
x509-certificate = "0.13.0"
bcder = "0.6.1"
hex = "0.4.3"
reqwest = "0.11.11"
base64 = "0.13.0"
tower-http = { version = "0.3.4", features = ["set-header"] }
