# SPDX-License-Identifier: Apache-2.0
[package]
name = "belvi_log_list"
version = "0.1.0"
edition = "2021"

[dependencies]
serde_json = "1.0.78"
serde = { version = "1.0.136", features = ["derive"]}
chrono = "0.4.19"
base64 = "0.13.0"
reqwest = { version = "0.11.9", features = ["brotli", "gzip", "json"] }
bytes = "1.1.0"
log = "0.4.14"
