# SPDX-License-Identifier: Apache-2.0
[package]
name = "belvi_render"
version = "0.1.0"
edition = "2021"

[dependencies]
x509-certificate = "0.13.0"
bcder = "0.6.1"
chrono = "0.4.19"
bytes = "1.1.0"
lazy_static = "1.4.0"
log = "0.4.14"

[dev-dependencies]
belvi_cache = { path = "../belvi_cache" }
belvi_cert = { path = "../belvi_cert" }
tokio = { version = "1.16.1", features = ["full"] }
env_logger = "0.9.0"
hex = "0.4.3"
